--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,12 +5,13 @@
     background-color: black;
     display: flex;
     flex-direction: column;
+    margin: 3rem 0;
 }
 
 .titles__title{
     color: white;
     font-family: 'Anton', sans-serif;
-    font-size: 6rem;
+    font-size: 5rem;
     margin: 10px;
     text-transform: uppercase;
 }
@@ -18,6 +19,7 @@
 .titles__title:nth-child(2){
     background-color: rgb(13, 237, 253);
     color: black;
+    padding: 1.44rem;
 }
 
 .subtitle--box{
@@ -39,20 +41,3 @@
     text-transform: uppercase;
 }
 
-@media (max-width: 610px) {
-    .titles__title{
-        font-size: 1.5rem;
-        margin: .2em;
-        text-align: center;
-    }
-
-    #subtitle{
-        font-size: 1em;
-    }
-
-    .subtitle--box__padlock{
-        height: 1em;
-        object-fit: cover;
-    }
-
-}
