--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -6,13 +6,15 @@
     display: flex;
     flex-direction: column;
     margin: 3rem 0;
+    background-color: red;
+    width: 100%;
 }
 
 .titles__title{
     color: white;
     font-family: 'Anton', sans-serif;
     font-size: 5rem;
-    margin: 10px;
+    /* margin: 1rem; */
     text-transform: uppercase;
 }
 
@@ -37,7 +39,7 @@
     color: white;
     font-family: 'Anton', sans-serif;
     font-size: 2rem;
-    margin: 10px;
+    margin: 1rem;
     text-transform: uppercase;
 }
 
