--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .video{
-    width: 65vw;
+    width: 70%;
     margin: 0rem auto;
     border: 5px solid #00BBFF;
     border-color: #00BBFF;
