--- a/assets/css/mediaQuieres.css
+++ b/assets/css/mediaQuieres.css
@@ -89,7 +89,6 @@
     #subtitle {
         font-size: 1rem;
         margin: 0.44rem;
-        text-transform: uppercase;
     }
 
 
@@ -103,16 +102,9 @@
 
 
     footer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         padding: 1rem;
         margin: 3rem auto;
-        background: #141414;
-        border-radius: 20px;
-    
         width: 90%
-    
     }
 
     .img-wrap {
@@ -120,25 +112,95 @@
     }
     footer .content h2 {
         font-size: 0.75rem;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 600;
-        text-align: center;
-        color: #787373;
         margin-top: 1rem;
     }
     
 
     footer .content p {
         max-width: 100%;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 400;
         font-size: 0.80rem;
+        line-height: 1rem;
+        margin-top: 1.3em;
+    }
+
+}
+
+
+@media (max-width:375px) {
+    body {
+        width: 100%;
+        margin: 0 1rem;
+    }
+
+    header {
+        margin: 0 1rem;
+    }
+
+    .titles {
+        width: 100%;
         text-align: center;
+    }
+
+    .titles__title {
+        font-size: 1.55rem;
+    }
+
+
+    .titles__title:nth-child(2) {
+        padding: 0.1rem;
+        font-size: 1.40rem;
+    }
+
+    .titles__title:nth-child(3) {
+        font-size: 1.40rem;
+    }
+
+
+    .subtitle--box {
+        margin-top: 1rem;
+    }
+
+    .subtitle--box__padlock {
+        height: 2em;
+        object-fit: cover;
+    }
+
+    #subtitle {
+        font-size: 1rem;
+        margin: 0.44rem;
+    }
+
+
+    .video {
+        width: 90%;
+    }
+
+    .plataform img{
+        width: 80%;
+    }
+
+
+    footer {
+        padding: 1rem;
+        margin: 3rem auto;
+        width: 90%
+    }
+
+    .img-wrap {
+        max-width: 30%;
+    }
+    footer .content h2 {
+        font-size: 0.75rem;
+        margin-top: 1rem;
+    }
+    
+
+    footer .content p {
+        max-width: 100%;
+        font-size: 0.80rem;
         line-height: 1rem;
         color: #787373;
         margin-top: 1.3em;
-        margin-left: auto;
-        margin-right: auto;
     }
 
 }
