--- a/assets/css/mediaQuieres.css
+++ b/assets/css/mediaQuieres.css
@@ -12,7 +12,7 @@
     }
 
     header {
-        margin: 0 1rem;
+        /* margin: 0 1rem; */
     }
 
     .titles {
@@ -50,11 +50,11 @@
 @media (max-width:425px) {
     body {
         width: 100%;
-        margin: 0 1rem;
+        /* margin: 0 1rem; */
     }
 
     header {
-        margin: 0 1rem;
+        /* margin: 0 1rem; */
     }
 
     .titles {
@@ -104,7 +104,7 @@
     footer {
         padding: 1rem;
         margin: 3rem auto;
-        width: 90%
+        width:60%
     }
 
     .img-wrap {
@@ -129,11 +129,11 @@
 @media (max-width:375px) {
     body {
         width: 100%;
-        margin: 0 1rem;
+        /* margin: 0 1rem; */
     }
 
     header {
-        margin: 0 1rem;
+        /* margin: 0 1rem; */
     }
 
     .titles {
