--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,50 +1,65 @@
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: none
+}
+
+
+
 body {
     width: 100%;
     background: #000;
 }
 
-.video {
-    width: 70%;
-    border-radius: 0.2rem;
-    margin: 0rem auto;
-    border: 3px solid #00BBFF;
-    border-color: #00BBFF;
-    box-shadow: 0px 0px 70px -19px rgb(0 212 255 / 81%);
-    cursor: pointer;
+html{
+    overflow-x: hidden;
 }
 
-.cadastro {
+.titles{
     display: flex;
-    justify-content: center;
-    width: 100%;
-    margin: 2rem 0;
+    gap: 1rem;
+    letter-spacing: 0.1rem;
+    text-align: center;
 }
 
-.cadastro button {
-    width: 25%;
-    height: 7vh;
+.effect-plataform{
+    margin: 5em auto;
+}
+
+.cadastro{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cadastro > button {
+    padding: 1rem 2.5rem;
+    border-radius: 1.5rem;
+    border: 2px solid #07cc18;
+    background: #197c21;
+    animation: btn 16s linear forwards;
+}
+
+.cadastro > button a {
+    text-decoration: none;
+    color: #fff;
     font-size: 1rem;
     font-weight: bold;
-    background-color: green;
-    border: 5px solid rgb(45, 196, 45);
-    border-radius: 30px;
-    color: white;
-    letter-spacing: 0.10rem;
-    cursor: pointer;
-    text-decoration: none;
-    animation: btn 3s linear forwards;
-
 }
 
-.cadastro button a {
-    color: white;
-    text-decoration: none;
+.cadastro button a:hover{
+    background: #197c21;
+    color: #eee;
+    transition: 0.2 all linear;
 }
-
 
 .cadastro button {
     visibility: hidden;
-    animation: btn 3s linear forwards;
+    animation: btn 16s linear forwards;
 }
 
 @keyframes btn {
@@ -62,20 +77,30 @@ body {
 }
 
 
+.video{
+    width: 70%;
+    margin: 0rem auto;
+    border: 5px solid #00BBFF;
+    border-color: #00BBFF;
+    box-shadow: 0px 0px 70px -19px rgb(0 212 255 / 81%);
+    cursor: pointer;
+}
+
+.particles{
+    margin: 0 auto;
+    width: 80%;
+    z-index: -1;
+    padding: 2.5rem;
+    background-image: url('/assets/images/background.jpeg');
+    background-position: center center;
+    background-size: cover cover;
+}
 
 
-
-
-
-
-
-
-
-/*  */
-
-.plataform {
-    width: 100%;
-    margin: 3.5rem auto;
+.plataform{
+    width: 80%;
+    margin: 0.2rem auto;
     display: flex;
     justify-content: center;
 }
+
